2017-03-09  Keith Marshall  <keithmarshall@users.sourceforge.net>

	MinGW.org WSL-5.0 released; update repository version.

	* VERSION.m4 (__VERSION__): Increment it to 5.0.1, anticipating a
	possible patch release prior to WSL-5.1

2017-03-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag for release of MinGW.org WSL-5.0

	* All files (wsl-5.0-release): Tag assigned.

2017-02-21  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Extend basic test suite infrastructure to w32api.

	* Makefile.in (check test tests): New rules; all are synonymous.
	(check-recursive): New rule; invoked by each of the preceding three
	synonyms, applying the common effect in nominated subdirectories.

2016-10-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make package installation prefix consistent throughout.

	* configure.ac (AC_PREFIX_DEFAULT): Assign it; match it to...
	* mingwrt/configure.ac w32api/configure.ac: ...these.

2016-07-19  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update install-sh to match mingw.org/build-aux package.

	* install-sh: New file; copied from build-aux package, it replaces...
	* mingwrt/install-sh w32api/install-sh: ...both of these.

2016-07-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Eliminate redundant configuration files.

	* .gitignore .hgignore (mingwrt/aclocal.m4, mingwrt/VERSION.m4)
	(w32api/aclocal.m4, w32api/VERSION.m4): Remove from SCM control.

2016-07-16  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support 'install-strip' as a universal make goal.

	* Makefile.in (install-strip): New goal; it is a dependency of...
	(subdirs): ...this subsidiary package directory collection.

2016-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Integrate mingwrt and w32api build; synchronize versions.

	* configure.ac Makefile.in: New files.

	* VERSION.m4: New file; link it, to create and maintain an identical